new changes done

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="banner-image">
-            <img draggable="false" height="100" src="assets/images/banner.jpg" alt="">
+            <img  height="100" src="assets/images/banner.jpg" alt="">
         </div>
         <div class="overlay"></div>
         <nav class="flex items-center justify-between ">
-            <div class="logo">
+            <div class="logo no-select">
                 <img width="140" src="assets/images/logo.svg" alt="">
             </div>
             <div class="navs flex justify-evenly items-center">
@@ -161,8 +161,8 @@
         <div class="membership flex flex-col gap-2 mt-6">
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <div class="email-form flex gap-1 ">
-                <label class="labelline" id="email-label" for="email">Email Address</label>
-                <input type="text"  id="email">
+                <label class="labelline" id="email-label2" for="email2">Email Address</label>
+                <input type="text"  id="email2">
                 <a href="" class="btn email-btn">Get Started</a>
             </div>
         </div>
